[metadata]
# replace with your username:
name = cloud-mappings
version = 0.7.5
author = Lucas Sargent
author_email = lucas.sargent@eliiza.com.au
description = MutableMapping interfaces for common cloud storage providers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JJ11teen/cloud-mappings
project_urls =
    Bug Tracker = https://github.com/JJ11teen/cloud-mappings/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    zict>=2.0

[options.extras_require]
azure = azure-identity==1.6.0; azure-storage-blob==12.8.1
aws = boto3==1.17.73
gcp = google-cloud-storage==1.38.0
tests = pytest==6.2.4

[options.packages.find]
where = src