[metadata]
name = cloud-mappings
version = 1.0.2
author = Lucas Sargent
author_email = lucas.sargent@outlook.com
description = MutableMapping interfaces for common cloud storage providers
keywords = mutable dict aws s3 azure gcp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JJ11teen/cloud-mappings
project_urls =
    Bug Tracker = https://github.com/JJ11teen/cloud-mappings/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
azureblob = azure-identity==1.6.0; azure-storage-blob==12.8.1
azuretable = azure-identity==1.6.0; azure-data-tables==12.1.0
gcpstorage = google-cloud-storage==1.38.0
awss3 = boto3==1.17.73
tests = pytest==6.2.4

[options.packages.find]
where = src